@@ -42,6 +42,8 @@ To announce to OMPI core testers:
     - &get_mpi_get_names() - return a csv list of all cached MPI get names
                              matching a pattern
     - &SVN::get_r_number() - return the revision number of an SVN workspace
+    - &search_and_replace() - perform a search and replace
+                              operation on a specified file
 
 - See https://svn.open-mpi.org/trac/mtt/changeset/863:
   - re-wrote funclet parser; MUST edit INI file and remove excess
@@ -150,5 +152,15 @@ To announce to OMPI core testers:
   - before_install_timeout
   - after_install
   - after_install_timeout
+
+- GNU Install before/after step parameters
+  - before_configure
+  - after_configure
+  - before_make_all
+  - after_make_all
+  - before_make_check
+  - after_make_check
+  - before_make_install
+  - after_make_install
 
 - include_file(s) INI parameter - just like pre-processor "#include" directives
